--- a/views/alreadyCreatedIP.ejs
+++ b/views/alreadyCreatedIP.ejs
@@ -1,3 +1,22 @@
+<!--
+If you already had been created in your IP;
+
+* It Says the status is 403.
+
+* You already created an API with that IP address.
+
+* You can change <DOMAIN> with your domain or localhost.
+
+* Get IP's with ipware npm module
+
+* Nothing else 
+
+* :)
+
+
+
+
+-->
 {
 <br>
 "durum": "403",
